# Komma

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yml  ellipsis.yaml  mkdocs.yml
cmake/: install.cmake  sc-machine-config.cmake.in
include/sc-machine-runner/: sc_machine_runner.hpp
sc-config/: sc_memory_config.hpp
scripts/: docker_entrypoint.sh  install_deps_ubuntu.sh
src/: main.cpp  sc_builder_runner.cpp  sc_machine_runner.cpp  sc_memory_config.cpp
tests/: sc-machine-test.ini
tests/configs/: deprecated-extensions-path.ini  deprecated-repo-path.ini  empty-multiextensions.ini  multiextensions-with-spaces.ini  multiextensions.ini  not-normalized-multiextensions.ini  removed-save-period.ini  removed-update-period.ini
tests/units/: sc_config_test.hpp  sc_machine_test.hpp  test_base.cpp  test_config.cpp
